<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BionicCow</string>
    <string name="add">add</string>
    <string name="proceed">Proceed</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="plus">&#160;&#160;+&#160;&#160;</string>
    <string name="overview">Overview</string>
    <string name="lists">Lists</string>
    <string name="tags">Tags</string>
    <string name="folders">Folders</string>
    <string name="locations">Locations</string>
    <string name="specials">Specials</string>
    <string name="list">List</string>
    <string name="tag">Tag</string>
    <string name="folder">Folder</string>
    <string name="location">Location</string>
    <string name="special">Special</string>
    <string name="logo">LOGO</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_task">Add Task</string>
    <string name="new_task">New Task</string>
    <string name="edit_recurrence">Edit recurrence option</string>
    <string name="recurrenceDialog">Recurrence option</string>
    <string name="noFolder">No folder</string>
    <string name="postpone">Postpone</string>
    <string name="delete">Delete</string>
    <string name="quick_add">enter task</string>
    <string name="show_completed">show %d completed</string>
    <string name="hide_completed">hide completed</string>
    <string name="empty">Empty</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="complete">Complete</string>
    <string name="uncomplete">Uncomplete</string>
    <string name="everything">Everything</string>
    <string name="applyTo">Apply to</string>
    <string name="name">Name</string>
    <string name="editing">Editing...</string>
	<string name="adding">Adding...</string>
    <string name="deleting">Deleting...</string>
    <string name="completing">Completing...</string>
    <string name="uncompleting">Uncompleting...</string>
    <string name="postponing">Postponing...</string>
    <string name="defaultList">(Default)</string>
	<string name="editNote">Edit Note</string>
	<string name="due">due</string>
	<string name="rep">repeat</string>
	<string name="prio">priority</string>
    
    <!-- Task Add/edit Strings -->
    <string name="never">Never</string> <!-- Date/TimePickerDialog -->
    <string name="priorityTitle">Priority</string>
    <string name="nameTitle">Name</string>
    <string name="nameHint">enter task name</string>
    <string name="listTitle">List</string>
    <string name="locationTitle">Location</string>
    <string name="tagTitle">Tags</string>
    <string name="tagHint">space separated tags</string>
    <string name="dueTitle">Due to</string>
    <string name="timeTitle">at</string>
    <string name="days">dd</string>
    <string name="hours">hh</string>
    <string name="minutes">mm</string>
    <string name="repeatTitle">Repeat</string>
	<string name="repeatOptionTitle">Repeat\noptions</string>
    <string name="advancedRepeatButton">Adv</string>
    <string name="estimateTitle">Estimate</string>
    <string name="estimateHint">0.0</string>
    <string name="repeatHint">enter repeat option</string>
    <string name="urlTitle">URL</string>
    <string name="urlHint">enter URL</string>
	<string name="sharedWith">Shared\nwith:&#160;</string>
	<string name="sharedHint">contacts</string>
    <string name="postponePhrase">Postponed %d times</string>
    <string name="completePhrase">Completed on</string>
    <string name="noteTitle">Notes</string>
    <string name="singleNoteTitle">Note</string>
    <string name="addNote">Add Note</string>
    <string name="noteTitleHint">Title</string>
    <string name="noteTextHint">Text</string>
    
    <!-- Recurrence Strings -->
    <string name="countTitle">times</string>
    <string name="untilTitle">until</string>
    <string name="weeklyTitle">Select weekday(s)</string>
    <string name="monthly1Title">Weekday</string>
    <string name="monthly2Title">Day</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>

</resources>
