<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >


        <RelativeLayout
            android:id="@+id/actionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/dismissButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:onClick="onDismissPressed"
                android:background="@drawable/selector_standard"
            	android:padding="3dp"
                android:src="@drawable/accept" />

            <Button
                android:id="@+id/completeButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/postponeButton"
                android:onClick="onCompletePressed"
                android:background="@drawable/selector_standard"
                android:paddingLeft="5dp"
            	android:paddingRight="5dp"
                android:text="@string/complete"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/postponeButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/deleteButton"
                android:onClick="onPostponePressed"
                android:background="@drawable/selector_standard"
            	android:paddingLeft="5dp"
            	android:paddingRight="5dp"
                android:text="@string/postpone"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:onClick="onDeletePressed"
                android:background="@drawable/selector_standard"
            	android:paddingLeft="5dp"
            	android:paddingRight="5dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/loading_data"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/loadingIcon"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/loadingText" />
    </RelativeLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/empty"
        android:textSize="20sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:footerDividersEnabled="false" />

</LinearLayout>